LPS-138930 Impedibug Alignment Issues When Address is Long

--- a/modules/apps/site/site-insurance-site-initializer/remote-web-components/raylife-d2c-web/src/styles/components/template.scss
+++ b/modules/apps/site/site-insurance-site-initializer/remote-web-components/raylife-d2c-web/src/styles/components/template.scss
@@ -2,8 +2,8 @@
 	padding: 2rem 0 2rem 2rem;
 
 	.title-area {
-		margin-bottom: 3rem;
-		margin-left: $card-padding;
+		margin: 0rem 7rem 3rem $card-padding;
+		width: 595px;
 	}
 
 	.form-area {
